app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rag-engine
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rag-engine
  template:
    metadata:
      labels:
        app: rag-engine
    spec:
      containers:
      - name: engine
        # USE YOUR LOWERCASE USERNAME HERE
        image: docker.io/harish9959/rag-engine:v5
        imagePullPolicy: Always
